--- a/tetris.html
+++ b/tetris.html
@@ -5,7 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Tetris BTS CIEL - Lycée Simone Veil</title>
 
+<link rel="icon" type="image/jpeg" href="logo 2.jpg">
+
 <style>
+/* ... (Reste de votre section <style>) ... */
   html, body {
     height: 100%;
     margin: 0;
