--- a/tetris.html
+++ b/tetris.html
@@ -560,9 +560,9 @@
 
   const profDialogues = {
       chimie: [
-          "« La pureté de cette ligne est de 99.1%. »",
-          "« Attention, réaction en chaîne imminente ! »",
-          "« Je suis celui qui emboîte. »"
+          "La pureté de cette ligne est de 99.1%.",
+          "Attention, réaction en chaîne imminente !",
+          "Je suis celui qui emboîte."
       ],
       strict: [
           "Ce n'est pas aligné ! Recommencez !",
