--- a/Accueil.html
+++ b/Accueil.html
@@ -297,7 +297,7 @@
   }
 
   .game-gif.voltlink {
-    background-image: url("voltLink.gif");
+    background-image: url("VoltLink.gif");
     background-position: center bottom;
   }
 
